[package]
name = "arday11ChessLibrary"
version = "0.4.1"
edition = "2021"
description = "test"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
